--- a/src/App.css
+++ b/src/App.css
@@ -64,12 +64,15 @@ code {
 .movie-over {
   background-color: white;
   color: black;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  transform: translateY(100%);
+  transform: translateY(102%);
   transition: transform 0.3s ease-in-out;
 }
 
@@ -79,4 +82,48 @@ code {
 
 .movie:hover .movie-over{
   transform: translateY(0%);
+}
+
+/* Movie Search */
+
+.search-movie {
+  background-color: #3CC47C;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-movie input {
+  max-width: 150px;
+  height: 24px;
+  border: none;
+  text-decoration: none;
+  font-family: inherit;
+  font-size: 1rem;
+  border: 2px solid #3CC47C;
+  border-radius: 50px;
+  padding: 0.8rem 1.5rem;
+}
+
+.search:focus {
+  outline: none;
+}
+
+.tag {
+  background-color: white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.tag.black {
+  color: #2c754e;
+}
+
+.tag.orange {
+  color: orange;
+}
+.tag.red {
+  color: red;
 }
